# mtf-mapper

./: CMakeLists.txt  README.md
include/: config.h
include/include/: bundle.h  cubic_spline_surface.h  distance_scale.h  distortion_optimizer.h  ellipse.h  find_polynomial_roots_jenkins_traub.h  five_point_focal_length_radial_distortion.h  mtf_renderer_grid.h  ratpoly_fit.h
src/: ellipse.cc  esf_model_loess.cc  esf_sampler_piecewise_quad.cc  find_polynomial_roots_jenkins_traub.cc  five_point_focal_length_radial_distortion.cc  grid_interpolator.cc  mtf_core.cc
